[tool.poetry]
name = "flake8-plugin-utils"
version = "1.1.1"
description = "The package provides base classes and utils for flake8 plugin writing"
authors = ["Afonasev Evgeniy <ea.afonasev@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/afonasev/flake8-plugin-utils"
homepage = "https://pypi.org/project/flake8-plugin-utils"
keywords = ['flake8', 'plugin', 'utils']

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "^19.10-beta.0",allows-prereleases = true}
bumpversion = "^0.5.3"
flake8-awesome = ">=0.2.0"
mypy = "^0.761.0"
pylint = "^2.2"
pytest = "^5.0"
pytest-cov = "^2.6"
pytest-deadfixtures = "^2.1"
pytest-mock = "^2.0"
unify = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
