[tool.poetry]
name = "flake8-plugin-utils"
version = "1.3.3"
description = "The package provides base classes and utils for flake8 plugin writing"
authors = ["Afonasev Evgeniy <ea.afonasev@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/afonasev/flake8-plugin-utils"
homepage = "https://pypi.org/project/flake8-plugin-utils"
keywords = ['flake8', 'plugin', 'utils']
include = ["flake8_plugin_utils/py.typed"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "^19.10-beta.0", allow-prereleases = true}
bumpversion = "^0.6.0"
flake8-awesome = ">=0.2.0"
mypy = "^0.930"
pylint = "^2.8"
pytest = "^6.2"
pytest-cov = "^2.11"
pytest-deadfixtures = "^2.2"
pytest-mock = "^3.6"
unify = "^0.5"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
